monitoring/prometheusalert/2.service-clusterip.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: prometheusalert
  namespace: monitoring
  labels:
    app: prometheusalert
spec:
  sessionAffinity: ClientIP
  selector:
    app: prometheusalert
  type: ClusterIP
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: 8080
