monitoring/prometheusalert/2.service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: prometheusalert
  namespace: monitoring
  labels:
    app: prometheusalert
spec:
  sessionAffinity: ClientIP
  selector:
    app: prometheusalert
  type: ClusterIP
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheusalert
  namespace: monitoring
  labels:
    app: prometheusalert
spec:
  ingressClassName: nginx
  rules:
  - host: prometheusalert.github.icu
    http:
      paths:
      - backend:
          service:
            name: prometheusalert
            port:
              number: 8080
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - prometheusalert.github.icu
    secretName: github-tls
