monitoring/prometheusalert/3.service-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheusalert
  namespace: monitoring
  labels:
    app: prometheusalert
spec:
  ingressClassName: nginx
  rules:
  - host: prometheusalert.github.icu
    http:
      paths:
      - backend:
          service:
            name: prometheusalert
            port:
              number: 8080
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - prometheusalert.github.icu
    secretName: github-tls
